Class casting issues resolved